[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/hud/Hud.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/actors/shotgun/ShotGun.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/wold/background/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/wold/Wold.gd" type="Script" id=4]

[node name="Wold" type="Node"]
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="ShotGun" parent="." instance=ExtResource( 2 )]

[node name="Hud" parent="." instance=ExtResource( 1 )]

[connection signal="shotgun_shoot" from="." to="." method="_on_Wold_shotgun_shoot"]
